--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@ body{
     min-height: 100vh;
     display: grid;
     place-content: center;
+    background-image: url(./1.jpg);
+    background-position: center;
+    background-size:cover ;
 }
 main{
     margin: 1em;
@@ -66,7 +69,10 @@ main img{
     padding: 10px 40px;
     border-radius: 6px;
     min-width:80px;
+    transition: all 0.5s;
 }
-.rotated-image{
-    -webkit-transform: rotate(360deg);
-  }
+.btn:hover{
+    background-color: #fff;
+    color: #000;
+    transform: scale(1.1);
+}
